feat: push images as ghcr
